UI: Tree View double-clicking on arrows tries to rename item #114059

Closed
opened 2023-10-23 12:40:16 +02:00 by Dalai Felinto · 4 comments

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-23 08:44, hash: 567cc7cf9ff8
Worked: -

Short description of error

If I double-click on a collapsable arrow it sometimes invoke the rename operation. Not only I believe this shouldn't be the case, but I also often get stuck in a "click to rename" loop, until I move my mouse away.

Exact steps for others to reproduce the error

Check the video (with audio) to hear, close to the end how I'm clearly clicking only once and yet it is triggering rename.

**Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-23 08:44, hash: `567cc7cf9ff8` Worked: - **Short description of error** If I double-click on a collapsable arrow it sometimes invoke the rename operation. Not only I believe this shouldn't be the case, but I also often get stuck in a "click to rename" loop, until I move my mouse away. **Exact steps for others to reproduce the error** * Open [double-click-rename.blend](/attachments/f30ca6f3-9769-45a0-aa98-fec8ca23a8d4) * Double-click on the Panel arrow. Check the video (with audio) to hear, close to the end how I'm clearly clicking only once and yet it is triggering rename.
Dalai Felinto added the
Priority
Normal
Module
User Interface
Status
Confirmed
Type
Bug
labels 2023-10-23 12:41:14 +02:00
Dalai Felinto added this to the User Interface project 2023-10-23 12:41:14 +02:00
Author
Owner

This may be related to #114055.

This may be related to #114055.
Author
Owner

Interesting enough, I also get a lot of unfreed memory blocks when reproducing this issue:

Error: Not freed memory blocks: 10, total unfreed memory 0.000076 MB
Data from NT len: 8 0x7fde125d17e8
strdup len: 8 0x7fde273e9ac8
strdup len: 8 0x7fde273eb0f8
strdup len: 8 0x7fde628ad648
strdup len: 8 0x7fde273e87b8
strdup len: 8 0x7fde273eb0a8
strdup len: 8 0x7fde273eb238
strdup len: 8 0x7fde273e8ad8
strdup len: 8 0x7fde273eb058
strdup len: 8 0x7fde273e8768
Interesting enough, I also get a lot of unfreed memory blocks when reproducing this issue: ``` Error: Not freed memory blocks: 10, total unfreed memory 0.000076 MB Data from NT len: 8 0x7fde125d17e8 strdup len: 8 0x7fde273e9ac8 strdup len: 8 0x7fde273eb0f8 strdup len: 8 0x7fde628ad648 strdup len: 8 0x7fde273e87b8 strdup len: 8 0x7fde273eb0a8 strdup len: 8 0x7fde273eb238 strdup len: 8 0x7fde273e8ad8 strdup len: 8 0x7fde273eb058 strdup len: 8 0x7fde273e8768 ```
Dalai Felinto changed title from UI: Grid Layout double-clicking on arrows tries to rename item to UI: Tree View double-clicking on arrows tries to rename item 2023-10-23 15:47:44 +02:00
Member

This seems fixed with 009c4b819c. Now the view item activation is done by simply applying the button, not by calling the regular button handling. This way side-effects like this are avoided.

This seems fixed with 009c4b819c. Now the view item activation is done by simply applying the button, not by calling the regular button handling. This way side-effects like this are avoided.
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-10-23 21:37:22 +02:00
Member

PR to fix mentioned memory leak: #114083

PR to fix mentioned memory leak: #114083
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114059
No description provided.