source/blender/editors/interface/interface_template_node_tree_interface.cc
@@ -151,6 +151,8 @@ class NodeSocketViewItem : public BasicTreeViewItem {
   }
   bool rename(const bContext &C, StringRefNull new_name) override
   {
+    MEM_SAFE_FREE(socket_.name);
+
     socket_.name = BLI_strdup(new_name.c_str());
     nodetree_.tree_interface.tag_items_changed();
     ED_node_tree_propagate_change(&C, CTX_data_main(&C), &nodetree_);
@@ -208,6 +210,8 @@ class NodePanelViewItem : public BasicTreeViewItem {
   }
   bool rename(const bContext &C, StringRefNull new_name) override
   {
+    MEM_SAFE_FREE(panel_.name);
+
     panel_.name = BLI_strdup(new_name.c_str());
     nodetree_.tree_interface.tag_items_changed();
     ED_node_tree_propagate_change(&C, CTX_data_main(&C), &nodetree_);
